[b]2.9.5[/b]
- Added: Custom date search to on-demand section
- Added: All teams option added under by team category
- Added: OnDemand team filter includes similar events, i.e. NHL includes NHL preseason
- Added: Progressive stream support added - expert setting in beta
- Changed: View Mode includes thumbnail and extends to all directories
- Fixed: Removed league filter within on-demand byteam event filter where it didn't make sense

[b]2.9.4[/b]
- Fixed: Eliminate condensed games that duplicate highlights (which seems to be all the time)
- Fixed: Fixed logic to correct highlight building

[b]2.9.3[/b]
- Added: Favorite team is bolded - defined on website
- Fixed: Tweaks added to correctly determine status of live games

[b]2.9.2[/b]
- Added: Highlights supported - display setting included
- Added: Condensed Games supported - display setting included
- Added: Initial on-demand screen shows recent events - display setting included
- Added: Setting added to set view mode for event and stream screens
- Changed: Title dates now include year

[b]2.9.1[/b]
- Added: Australia location added.
- Added: Added date to on-demand stream titles
- Fixed: Live and on-demand special event titles supported

[b]2.9.0[/b]
- Added: Restructured live events and streams to improve performance
- Added: Restructured on-demand events and streams to improve performance
- Added: Live DVR stream option added, although rewind not currently possible
- Changed: Team events now display dates on event page
- Fixed: Minor fixes made to stream filtering
- Fixed: Corrected a live event status issue

[b]2.8.8[/b]
- Added: Display score option added to settings for live games
- Added: Click final live games searches for current day on-demand games
- Added: Setting to toggle display of fanart
- Changed: Skip on-demand year filter for faster access
- Changed: Display league with on-demand team name
- Changed: Reorganize stream settings as a separate category

[b]2.8.7[/b]