@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addons>
-<addon id="plugin.video.xbmc-ball-streams" name="XBMC Ball Streams" version="2.9.5" provider-name="Craig McNicholas, Andrew Wise">
+<addon id="plugin.video.xbmc-ball-streams" name="XBMC Ball Streams" version="2.9.6" provider-name="Craig McNicholas, Andrew Wise">
 	<requires>
 		<import addon="xbmc.python" version="2.1.0" />
 	</requires>
