@@ -16,12 +16,13 @@ class Mode:
     ONDEMAND_BYDATE_YEARMONTH_DAY_EVENT = 6
     ONDEMAND_BYDATE_CUSTOM = 7
     ONDEMAND_BYDATE_CUSTOM_YEARMONTH = 8
-    ONDEMAND_BYTEAM = 9
-    ONDEMAND_BYTEAM_LEAGUE = 10
-    ONDEMAND_BYTEAM_LEAGUE_TEAM = 11
-    ONDEMAND_BYTEAM_LEAGUE_TEAM_EVENT = 12
-    LIVE = 13
-    LIVE_EVENT = 14
+    ONDEMAND_BYDATE_CUSTOM_YEARMONTH_RANGE = 9
+    ONDEMAND_BYTEAM = 10
+    ONDEMAND_BYTEAM_LEAGUE = 11
+    ONDEMAND_BYTEAM_LEAGUE_TEAM = 12
+    ONDEMAND_BYTEAM_LEAGUE_TEAM_EVENT = 13
+    LIVE = 14
+    LIVE_EVENT = 15
 
 # Method to get the parameters for the current view
 # @return an array of parameters
